--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ embedded-hal = "*"
 nb = {version = "*", features = ["unstable"]}
 libm = "*"
 cortex-m = "*"
-heapless = {version = "*", features = ["const-fn"]}
+heapless = {version = "*"}
 embedded-sdmmc = { git = "https://github.com/thejpster/embedded-sdmmc-rs" }
 mpu6050 = { git = "https://github.com/Big-B/mpu6050" }
 
